--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,15 @@
 @tailwind base;
+
+@layer base {
+    h1 {
+        @apply ml-2 py-2 text-2xl text-left italic text-sky-800;
+    }
+    a {
+        @apply text-blue-600;
+    }
+    .callout {
+        @apply ml-8 mr-3 my-2 px-2 py-4 rounded-sm border-l-4 border-sky-700 bg-sky-50 shadow-md text-sm;
+    }
+}
 @tailwind components;
 @tailwind utilities;
